@@ -21,3 +21,6 @@
 2016-12-19 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'make install-win32' target.
 	* Added a RDLibrary icon in 'icons/rdlibrary.ico'.
+2016-12-20 Fred Gleason <fredg@paravelsystems.com>
+	* Split the 'StreamPlayer' class into abstract 'StreamPlayer'
+	and implementation-specifc 'StreamPlayerGlass' classes.
